branches: list dynamically and add new branch